# PHD-Filter

./: map.m~
maps/: CMakeLists.txt  empty.m  map.m  package.xml
maps/ACES3_Austin/: ACES3_Austin_A.orig.pgm  ACES3_Austin_A.pgm  ACES3_Austin_A.yaml  ACES3_Austin_B.pgm  ACES3_Austin_B.yaml
maps/AIC1/: aic1.pgm  aic1.yaml
maps/Seattle_UW/: seattle_uw.pgm  seattle_uw.yaml  seattle_uw_Black.pgm
maps/autolab/: autolab.yaml
maps/cumberland/: cumberland.pgm
maps/empty/: empty.pgm  empty.yaml
maps/intel/: intel.pgm  intel.yaml
maps/intel_oregon/: intel_oregon.orig.pgm  intel_oregon.pgm  intel_oregon.yaml
maps/intel_research_lab/: intel_A.pgm  intel_A.yaml  intel_B.pgm  intel_B.yaml  intel_C.pgm  intel_C.yaml
maps/launch/: test.launch
maps/levine_towne/: levine_towne_A.pgm  levine_towne_A.yaml  levine_towne_B.pgm  levine_towne_B.yaml
maps/map_sim/: map_sim.orig.pgm  map_sim.pgm  map_sim.yaml
maps/map_test/: 889_05.pgm  889_05.yaml  889_05_black.pgm  autolab.pgm  autolab_black.pgm  basement.pgm  basement.yaml  basement_black.pgm  cumberland.yaml  cumberland_black.pgm  cumberland_black.yaml  frieburg.pgm  frieburg.yaml  frieburg_black.pgm  rec_1.pgm  rec_1.yaml  rec_1_black.pgm  sal2.pgm  sal2.yaml  sal2_black.pgm  sal3.pgm  (+4 more)
phd_conversion/: CMakeLists.txt  package.xml
phd_conversion/launch/: detection_bearing.launch
phd_conversion/src/: detection_bearing.cpp
phd_filter/: CMakeLists.txt  OSPA.txt  OSPA_dynamic.txt  package.xml  plot_ave_dynamic.py  plot_ospa.py  plot_ospa_all.py  plot_ospa_dynamic.py
phd_filter/OSPA/: OSPA1.txt  OSPA_cm1_1.txt  OSPA_cm1_2.txt  OSPA_cm1_3.txt  OSPA_cm1_4.txt  OSPA_cm1_5.txt  OSPA_cm1_average.txt  OSPA_cm2_2.txt  OSPA_cm2_3.txt  OSPA_cm2_4.txt  OSPA_cm2_5.txt  OSPA_cm2_average.txt  OSPA_cm3_1.txt  OSPA_cm3_2.txt  OSPA_cm3_3.txt  OSPA_cm3_4.txt  OSPA_cm3_5.txt  OSPA_cm3_average.txt  extact.py  record.txt
phd_filter/OSPA_Para/: OSPA_chair_cm1_1.txt  OSPA_chair_cm1_2.txt  OSPA_chair_cm1_3.txt  OSPA_chair_cm1_4.txt  OSPA_chair_cm1_5.txt  OSPA_chair_cm1_average.txt  OSPA_chair_cm2_1.txt  OSPA_chair_cm2_2.txt  OSPA_chair_cm2_3.txt  OSPA_chair_cm2_4.txt  OSPA_chair_cm2_5.txt  OSPA_chair_cm2_average.txt  OSPA_chair_cm3_1.txt  OSPA_chair_cm3_2.txt  OSPA_chair_cm3_3.txt  OSPA_chair_cm3_4.txt  OSPA_chair_cm3_5.txt  OSPA_chair_cm3_average.txt  OSPA_person1.txt  OSPA_person2.txt  OSPA_person3.txt  OSPA_person_cm1_2.txt  OSPA_person_cm1_3.txt  OSPA_person_cm1_4.txt  OSPA_person_cm1_5.txt  OSPA_person_cm1_average.txt  OSPA_person_cm2_2.txt  OSPA_person_cm2_3.txt  OSPA_person_cm2_4.txt  OSPA_person_cm2_5.txt  OSPA_person_cm2_average.txt  OSPA_person_cm3_2.txt  OSPA_person_cm3_3.txt  OSPA_person_cm3_4.txt  OSPA_person_cm3_5.txt  OSPA_person_cm3_average.txt  OSPA_table1.txt  OSPA_table2.txt  OSPA_table3.txt  OSPA_table_cm1_2.txt  (+16 more)
phd_filter/OSPA_dyn/: OSPA_dynamic_1.txt
phd_filter/backup/: OSPA_chair_cm1_2.txt  OSPA_chair_cm1_3.txt  OSPA_chair_cm2_3.txt  OSPA_chair_cm3_3.txt  OSPA_cm1_2.txt  OSPA_cm1_3.txt  OSPA_cm2_2.txt  OSPA_cm2_3.txt  OSPA_cm3_3.txt  OSPA_person_cm1_2.txt  OSPA_person_cm1_3.txt  OSPA_person_cm2_2.txt  OSPA_person_cm2_3.txt  OSPA_person_cm3_3.txt  OSPA_table_cm1_3.txt  OSPA_table_cm2_3.txt  OSPA_table_cm3_3.txt
phd_filter/config/: const_vel_motion_model.yaml  grw_motion_model.yaml  phd_filter_rviz.rviz  static_motion_model.yaml
phd_filter/include/grid_map/: grid_map.hpp
phd_filter/include/motion_model/: const_vel_motion_model.hpp  grw_motion_model.hpp  motion_model.hpp  motion_predictor.hpp  static_motion_model.hpp
phd_filter/launch/: dog_moving.launch  dynamic_chair.yaml  dynamic_table.yaml  dynamic_targets-1.yaml  dynamic_targets-2.yaml  dynamic_targets.launch  moving.launch  parallel_filters.launch  robot0.rviz  robot0_all.rviz  robot_moving.launch  rviz.launch  scarab0.rviz  targets_brunch-1.yaml  targets_brunch-2.yaml  targets_brunch-3.yaml  targets_intel10-1.yaml  targets_intel10-2.yaml  targets_intel10-3.yaml  targets_intel40.yaml  targets_simple-1.yaml  targets_simple-2.yaml  targets_simple-3.yaml  test.launch  test_conversion.launch  test_phd_filter.launch
phd_filter/src/: CostMatrix.hpp  HungarianMethod.hpp  OSPA.hpp  backup.cpp  confusion_matrix.cpp  detection_bearing.cpp  inside_fov.cpp  motion_predictor.cpp  motion_simulator.cpp  phd_filter.hpp  phd_filter_bearing_node.cpp  phd_filter_camera_node.cpp  phd_filter_range_bearing_node.cpp  phd_filter_range_node.cpp  resampler.hpp
phd_msgs/: CMakeLists.txt  package.xml
phd_msgs/msg/: Bearing.msg  BearingArray.msg  Camera.msg  CameraArray.msg  Particle.msg  ParticleArray.msg  RangeArray.msg  RangeBearing.msg  RangeBearingArray.msg  Target.msg  TargetArray.msg
phd_sensor/: CMakeLists.txt  package.xml
phd_sensor/config/: bearing_sensor.yaml  camera_sensor.yaml  range_bearing_sensor.yaml  range_bearing_sensor_chair.yaml  range_bearing_sensor_dynamic.yaml  range_bearing_sensor_person.yaml  range_bearing_sensor_table.yaml  range_sensor.yaml
phd_sensor/include/phd_sensor/: sensor.hpp  sensor_aggregator.hpp  sensor_sim.hpp  sensor_throttle.hpp  sensor_vis.hpp
phd_sensor/include/phd_sensor/bearing/: bearing_sensor.hpp  bearing_sim.hpp
phd_sensor/include/phd_sensor/camera/: camera_sensor.hpp  camera_sim.hpp
phd_sensor/include/phd_sensor/downward/: downward_sensor.hpp
phd_sensor/include/phd_sensor/range/: range_sensor.hpp  range_sim.hpp
phd_sensor/include/phd_sensor/range_bearing/: range_bearing_sensor.hpp  range_bearing_sim.hpp
phd_sensor/launch/: dynamic_sensor.launch  parallel_sensor.launch  robot0.rviz  semantic_sensor.launch  sensor_person.launch  sensor_table.launch  test_camera.launch  test_sensor.launch
phd_sensor/src/: bearing_aggregator.cpp  bearing_sim.cpp  bearing_throttle.cpp  bearing_vis.cpp  camera_aggregator.cpp  camera_sim.cpp  camera_throttle.cpp  camera_vis.cpp  range_aggregator.cpp  range_bearing_aggregator.cpp  range_bearing_sim.cpp  range_bearing_throttle.cpp  range_bearing_vis.cpp  range_sim.cpp  range_throttle.cpp  range_vis.cpp
phd_utils/: CMakeLists.txt  package.xml
phd_utils/src/: pose_aggregator_node.cpp
(+7 files in other folders)
