<?xml version="1.0"?>
<package>
  <name>phd_filter</name>
  <version>0.0.0</version>
  <description>The phd_filter package</description>
  <maintainer email="pdames@seas.upenn.edu">Philip Dames</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>phd_msgs</build_depend>
  <build_depend>phd_sensor</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <!--<build_depend>ffld_ros</build_depend>-->
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>phd_msgs</run_depend>
  <run_depend>phd_sensor</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <!--<run_depend>ffld_ros</run_depend>-->
</package>
