<?xml version="1.0"?>
<package>
	<name>phd_utils</name>
  <version>0.0.0</version>
  <description>The phd_utils package</description>

  <maintainer email="pdames@temple.edu">Philip Dames</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>phd_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>phd_msgs</run_depend>
  
</package>
